--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -17,11 +17,10 @@
   text-transform: uppercase;
 }
 
-
 @mixin skill-grid($name, $area) {
   grid-area: $area;
   .img {
-    background: url("../../assets/images/"+ $name +".png") center no-repeat;
+    background: url('../../assets/images/'+ $name +'.png') center no-repeat;
     background-size: contain;
     height: 75%;
     margin: 0 auto;
@@ -34,17 +33,17 @@
 }
 
 @mixin section-line($number, $height, $width) {
-  background: url("../../assets/images/Lines"+ $number +"@3x.png") center
+  background: url('../../assets/images/Lines'+ $number +'@3x.png') center
     no-repeat;
   background-size: 100% 100%;
   height: 0;
-  margin: 20px 0;
+  margin: 80px 0;
   padding-top: percentage($height / $width);
   width: 100%;
 }
 
 @mixin work-project($name,$height,$width) {
-  margin: 50px auto;
+  margin: 0 auto 80px auto;
 
   .img {
     background: url('../../assets/images/' + $name + '@3x.png') center no-repeat;
@@ -59,17 +58,16 @@
     text-align: center;
   }
 
-  .source{
+  .source {
     align-items: flex-end;
     display: flex;
     flex-direction: column;
     height: 35px;
     justify-content: space-around;
-
   }
 }
 
-@mixin footer-grid($name, $height, $width){
+@mixin footer-grid($name, $height, $width) {
   background: url('../../assets/images/' + $name + '@3x.png') center no-repeat;
   background-size: contain;
   display: inline-block;
